--- a/src/main/webapp/PostList.html
+++ b/src/main/webapp/PostList.html
@@ -10,7 +10,44 @@
     <script src="/js/jq-paginator.min.js"></script>
     <script src="/js/tinymce/tinymce.min.js"></script>
     <link rel="stylesheet" href="/css/picnic.css">
+    <script src="/js/postlist.js"></script>
+<!--    <link rel="stylesheet" href="/css/bootstrap.min.css">-->
     <style>
+        .active>a{
+            background-color: #ddd!important;
+        }
+        .disabled{
+            cursor: not-allowed!important;
+            pointer-events: none!important;
+        }
+        .disabled a{
+            color: #aaaaaa!important;
+        }
+        li{
+            list-style: none;
+            user-select: none;
+        }
+        .pagination>li>a:focus,.pagination>li>a:hover,.pagination>li>a>span:focus,.pagination>li>span:hover{
+            z-index: 2;
+            color: #23527c;
+            background-color:#aaa;
+            border-color: #ddd;
+        }
+        .pagination>li{
+            display: inline;
+        }
+        .pagination>li>a,.pagination>li>span{
+            position: relative;
+            float: left;
+            padding: 6px 12px;
+            margin-left: 1px;
+            line-height: 1.42;
+            color: #337ab7;
+            text-decoration: none;
+            background-color: #fff;
+            border: 1px solid #ddd;
+        }
+
         #postclasslist {
             text-align: left;
         }
@@ -63,12 +100,11 @@
                     </a>
                 </div>
             </div>
-            <nav aria-label="Page navigation">
-                <ul class="pagination"></ul>
-                <div id="pageshow"></div>
-            </nav>
-            <input type="text" id="newposttitle"  v-model="title" placeholder="输入标题,5-50个字之间" minlength="5" maxlength="50" style="margin-left: 10px;margin-bottom: 10px">
-            <textarea id="tinydemo" style="margin-left: 10px;" placeholder="输入帖子内容,最少五个字符" minlength="5"></textarea>
+            <ul class="pagination"></ul>
+            <input type="text" id="newposttitle" v-model="title" placeholder="输入标题,3-50个字之间" minlength="3"
+                   maxlength="50" style="margin-left: 10px;margin-bottom: 10px">
+            <textarea id="tinydemo" style="margin-left: 10px;" placeholder="输入帖子内容,最少五个字符"
+                      minlength="5"></textarea>
             <button id="newpost" style="margin-left: 10px" @click="sendpost" class="success">发送帖子</button>
         </div>
     </div>
@@ -88,76 +124,55 @@
     resourceposition = URL.indexOf("PostClass");
     resourceposition = resourceposition + 10
     resourcepositionend = URL.indexOf("?");
-    postclass = URL.substring(resourceposition,resourcepositionend)
+    postclass = URL.substring(resourceposition, resourcepositionend)
     sendurl = "/getPostList/" + postclass
     pagepos = URL.indexOf("page=");
     page = URL.substring(pagepos + 5)
-    totalcount=1;
-    $(document).ready(function () {
-        axios({
-            method: "post",
-            url: "/getpostcountServlet?postclass="+postclass
-        }).then(function (resp) {
-            totalcount=resp.data.totalcount
-            console.log(totalcount)
-            console.log(resp.data.totalcount)
-        })
-        console.log(totalcount)
-        $('.pagination').jqPaginator({
-            totalCounts: totalcount,
-            pageSize: 10,
-            visiblePages: 10,
-            currentPage: page,
-            onPageChange: function (num, type) {
-                window.location.href="/PostClass/"+postclass+"?page="+num
-            }
-        });
-    })
+    totalcount = 1;
+
 
     const {createApp} = Vue
     createApp({
         data() {
             return {
                 postlist: [],
-                title:"",
+                title: "",
             }
         },
         mounted() {
             var _this = this;
             axios({
                 method: "post",
-                url: sendurl+"?page="+page
+                url: sendurl + "?page=" + page
             }).then(function (resp) {
                 _this.postlist = resp.data
             })
         },
-        methods:{
-            sendpost:function () {
-                if (this.title.length<5){
+        methods: {
+            sendpost: function () {
+                if (this.title.length < 3) {
                     Swal.fire({
                         icon: 'error',
-                        title: "标题长度不得少于5个字符",
+                        title: "标题长度不得少于3个字符",
                         showConfirmButton: false,
                         timer: 1500
                     })
-                }
-                else if (tinyMCE.activeEditor.getContent().length<5){
+                } else if (tinyMCE.activeEditor.getContent().length < 5) {
                     Swal.fire({
                         icon: 'error',
                         title: "帖子内容不得少于5个字符",
                         showConfirmButton: false,
                         timer: 1500
                     })
-                }
-                else {
+                } else {
                     axios({
                         method: "post",
                         url: "/sendpostServlet",
-                        data:"pcid="+this.postlist[0].pcid+"&title="+this.title+"&content="+tinyMCE.activeEditor.getContent()
+                        data: "pcid=" + this.postlist[0].pcid + "&title=" + this.title + "&content=" + tinyMCE.activeEditor.getContent()
                     }).then(function (resp) {
                         iconmark = 'error'
-                        if (resp.data.msg=="发送成功"){
-                            iconmark="success";
+                        if (resp.data.msg == "发送成功") {
+                            iconmark = "success";
                         }
                         Swal.fire({
                             icon: iconmark,
@@ -165,7 +180,7 @@
                             showConfirmButton: false,
                             timer: 1500
                         })
-                        if (resp.data.msg=="发送成功") {
+                        if (resp.data.msg == "发送成功") {
                             setTimeout("window.location.reload(true)", 1000);
                         }
                     })
@@ -176,7 +191,6 @@
     $(document).ready(function () {
         $("#newpost").click(function () {
             $("#testdiv").html(tinyMCE.activeEditor.getContent())
-            console.log(tinyMCE.activeEditor.getContent())
         })
         tinymce.init({
             selector: '#tinydemo',
