--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -89,9 +89,9 @@
     首页
   </div>
   </a>
-  <div class="headerbtn leftbtn">
-    版区
-  </div>
+<!--  <div class="headerbtn leftbtn">-->
+<!--    版区-->
+<!--  </div>-->
   <div class="headerbtn leftbtn">
     收藏
   </div>
