--- a/src/main/webapp/user/register.html
+++ b/src/main/webapp/user/register.html
@@ -37,7 +37,7 @@
                 用户名:
             </td>
             <td>
-                <label style="height: 50px;"><input type="text" name="username" v-model="username" id="username"></label>
+                <label style="height: 50px;"><input type="text" name="username" v-model="username" id="username" placeholder="3-10个字符"></label>
             </td>
             <td>
                 <span id="tips"></span>
