--- a/src/main/webapp/postContent.html
+++ b/src/main/webapp/postContent.html
@@ -19,6 +19,7 @@
         }
 
         .disabled {
+            /*设置按钮禁用*/
             cursor: not-allowed !important;
             pointer-events: none !important;
         }
@@ -80,6 +81,23 @@
             margin-left: 10px !important;
             margin-top: 10px !important;
         }
+
+        #collectico {
+            width: 30px;
+            height: 30px;
+            border-radius: 15px;
+        }
+        .usernamea{
+            color: black;
+        }
+
+        #collectico:hover {
+            background-color: #aaa;
+        }
+
+        #collectico:active {
+            background-color: #ddd;
+        }
     </style>
 </head>
 <body style="width: 100%;">
@@ -90,6 +108,7 @@
     })
 </script>
 <div style="width: 1190px;margin: 0 auto" id="postclasslist">
+    <div id="getpid" hidden>{{post.pid}}</div>
     <div style="width: 1190px;display: inline-block;margin-top: 10px;">
         <div id="pcl">
             <div class="eachpost">
@@ -102,46 +121,55 @@
             <div class="eachpost" style="min-height: 150px" v-if="page==1">
                 <div style="width: 100px;height: 134px;display: inline-block;margin-left: 10px;margin-right: 0;margin-top: 10px;margin-bottom: auto;float:left;">
                     <div>
+                        <a class="usernamea" :href="'/user/msg/'+post.uid">
                         <img :src="'/resource/img/upload/'+post.img" style="width: 100px;height: 100px;">
+                        </a>
                     </div>
                     <div style="text-align: center">
-                        {{post.username}}
+                        <a class="usernamea" :href="'/user/msg/'+post.uid">
+                            {{post.username}}
+                        </a>
                     </div>
                 </div>
-                <div style="display: inline-block;margin: 10px;margin-left: 0px;width: 1000px;height: 100%;">
+                <div style="display: inline-block;margin: 10px;margin-left: 0px;width: 1000px;min-height: 80px">
                     <div class="postclassdiv">
                         <div style="margin-left: 10px;float: top">
-                            <p v-html="post.content"></p>
-                        </div>
-                        <div class="postremarks" style="margin: 10px;">
-                            <p>
-                                发帖时间:{{post.sendtime}}
-                                查看数:{{post.viewcount}}
-                                回复数:{{post.replycount}}
-                            </p>
+                            <p v-html="post.content" style="margin: 0"></p>
                         </div>
                     </div>
+                </div>
+                <div class="postremarks" style="margin-left: 120px;">
+                    <p>
+                        发帖时间:{{post.sendtime}}
+                        查看数:{{post.viewcount}}
+                        回复数:{{post.replycount}}
+                        <img src="/resource/img/collect.png" id="collectico" alt="收藏" title="收藏">
+                    </p>
                 </div>
             </div>
             <div v-for="r in replylist">
                 <div class="eachpost" style="position: relative;min-height: 150px">
                     <div style="width: 100px;height: 134px;display: inline-block;margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: auto;float:left;">
                         <div>
+                            <a class="usernamea" :href="'/user/msg/'+r.uid">
                             <img :src="'/resource/img/upload/'+r.img" style="width: 100px;height: 100px;">
+                            </a>
                         </div>
                         <div style="text-align: center">
+                            <a class="usernamea" :href="'/user/msg/'+r.uid">
                             {{r.username}}
+                            </a>
                         </div>
                     </div>
-                    <div class="postclassdiv">
+                    <div class="postclassdiv" style="min-height: 100px">
                         <div>
-                            <p style="margin: 10px" v-html="r.content"> </p>
+                            <p style="margin: 10px" v-html="r.content"></p>
                         </div>
-                        <div class="postremarks" style="margin: 10px">
-                            <p>
-                                发帖时间:{{r.sendtime}}
-                            </p>
-                        </div>
+                    </div>
+                    <div class="postremarks" style="margin: 10px;float: bottom">
+                        <p>
+                            发帖时间:{{r.sendtime}}
+                        </p>
                     </div>
                 </div>
             </div>
@@ -154,8 +182,86 @@
     </div>
 </div>
 <script>
+    $(document).ready(function () {
+        $("#collectico").click(function () {
+            axios({
+                method: "post",
+                url: "/insertcollectServlet",
+                data:"pid="+$("#getpid").text()
+            }).then(function (resp) {
+                var icontype='error'
+                if (resp.data.msg == '收藏成功') {
+                    icontype = 'success'
+                    Swal.fire({
+                        icon: icontype,
+                        title: resp.data.msg,
+                        showConfirmButton: false,
+                        timer: 1500
+                    })
+                }
+                else if (resp.data.msg == '已经收藏过了,是否取消收藏?'){
+                    icontype = 'error'
+                    Swal.fire({
+                        icon: icontype,
+                        title: resp.data.msg,
+                        showCancelButton: true,
+                        showConfirmButton: true,
+                        confirmButtonText: '取消收藏',
+                        cancelButtonText: "关闭",
+                    }).then((res) => {
+                        if (res.value) {
+                            axios({
+                                method: "POST",
+                                url: "/deletecollectServlet",
+                                data:"pid="+$("#getpid").text()
+                            }).then(function (response) {
+                                console.log(response.data.msg)
+                                if (response.data.msg == "取消收藏成功") {
+                                    Swal.fire(
+                                        {
+                                            type: 'success',
+                                            icon: 'success',
+                                            title: response.data.msg,
+                                            showConfirmButton: false,
+                                            timer: 2000
+                                        }
+                                    )
+                                } else {
+                                    Swal.fire(
+                                        {
+                                            type: 'error',
+                                            icon: 'error',
+                                            title: response.data.msg,
+                                            showConfirmButton: false,
+                                            timer: 2000
+                                        }
+                                    )
+                                }
+                            })
+                        }
+                    })
+                }else {
+                    Swal.fire({
+                        icon: icontype,
+                        title: resp.data.msg,
+                        showConfirmButton: false,
+                        timer: 1500
+                    })
+                }
+            }).catch(function (error) {
+                var icontype='error'
+                Swal.fire({
+                    icon: icontype,
+                    title: "请求发送失败",
+                    showConfirmButton: false,
+                    timer: 1500
+                })
+            })
+        })
+    })
+
     const {createApp} = Vue
-    createApp({
+    let v = createApp({
         data() {
             return {
                 post: [],
