--- a/src/main/webapp/user/msg.html
+++ b/src/main/webapp/user/msg.html
@@ -5,6 +5,8 @@
     <script src="/js/vue.global.js"></script>
     <script src="/js/axios.min.js"></script>
     <script src="/js/jquery-3.0.0.js"></script>
+    <script src="/js/jquery.cookie.js"></script>
+    <script src="/js/jq-paginator.min.js"></script>
     <script src="/js/sweetalert2.all.min.js"></script>
     <script src="/js/sha1.min.js"></script>
     <script src="/js/flickity.pkgd.min.js"></script>
@@ -12,6 +14,47 @@
     <link rel="stylesheet" href="/css/picnic.css">
     <title>用户信息</title>
     <style>
+        .active > a {
+            background-color: #ddd !important;
+        }
+
+        .disabled {
+            cursor: not-allowed !important;
+            pointer-events: none !important;
+        }
+
+        .disabled a {
+            color: #aaaaaa !important;
+        }
+
+        li {
+            list-style: none;
+            user-select: none;
+        }
+
+        .pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > a > span:focus, .pagination > li > span:hover {
+            z-index: 2;
+            color: #23527c;
+            background-color: #aaa;
+            border-color: #ddd;
+        }
+
+        .pagination > li {
+            display: inline;
+        }
+
+        .pagination > li > a, .pagination > li > span {
+            position: relative;
+            float: left;
+            padding: 6px 12px;
+            margin-left: 1px;
+            line-height: 1.42;
+            color: #337ab7;
+            text-decoration: none;
+            background-color: #fff;
+            border: 1px solid #ddd;
+        }
+
         #usertable tbody tr td {
             background-color: rgba(255, 255, 255, 0);
             line-height: 30px;
@@ -20,11 +63,29 @@
         .usertable tbody tr {
             background-color: rgba(255, 255, 255, 0);
         }
-        .usersetchangebtn td button{
+
+        .usersetchangebtn td button {
             background-color: #ddd;
             color: black;
             margin-left: 10px;
             width: 270px;
+        }
+        .collecttd{
+            border: #000000 solid 1px;
+            width: 1000px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+        .collectp{
+            width: 1000px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+        #collecttable{
+            margin-left: 10px;
+            padding-bottom: 10px;
         }
     </style>
 </head>
@@ -37,7 +98,7 @@
 </script>
 <div style="width: 1190px;margin: 0 auto;margin-top: 10px" id="userinformation">
     <div class="grid-content" style="background-color:rgba(255,255,255,0.8);">
-        <table>
+        <table id="usermenu" hidden>
             <tr class="usersetchangebtn">
                 <td colspan="2">
                     <button id="userinfobtn">
@@ -46,7 +107,7 @@
                     <button id="usersetbtn">
                         用户设置
                     </button>
-                    <button id="collectbtn">
+                    <button id="collectbtn" @click="getcollectlist">
                         用户收藏
                     </button>
                     <button id="msgbtn">
@@ -63,7 +124,7 @@
                 </td>
             </tr>
             <tr>
-                <td>
+                <td id="getuid">
                     uid:{{user.uid}}
                 </td>
                 <td>
@@ -154,11 +215,19 @@
                 </td>
             </tr>
         </table>
-        <table id="collecttable" hidden>
-            <tr>
-                <td>222</td>
-            </tr>
-        </table>
+        <div id="collecttable" hidden>
+            <table v-for="c in collectlist">
+                <tr>
+                    <td class="collecttd">
+                        <div class="collectp">
+                            <a :href="'/Posts/'+c.pid+'?page=1'" style="color: black">{{c.title}}</a>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            <ul class="pagination" style="height: 40px"></ul>
+        </div>
+
         <table id="msgtable" hidden>
             <tr>
                 <td>111</td>
@@ -169,7 +238,7 @@
 </div>
 
 <script>
-    $(document).ready(function (){
+    $(document).ready(function () {
         $("#userinfobtn").click(function () {
             $("#setpage").hide()
             $("#collecttable").hide()
@@ -182,19 +251,27 @@
             $("#basictable").hide()
             $("#setpage").show()
         })
-        $("#collectbtn").click(function () {
-            $("#msgtable").hide()
-            $("#basictable").hide()
-            $("#setpage").hide()
-            $("#collecttable").show()
-        })
         $("#msgbtn").click(function () {
             $("#collecttable").hide()
             $("#basictable").hide()
             $("#setpage").hide()
             $("#msgtable").show()
         })
-        $("#changeemailbtn").click(function (){
+        $("#changeiconbtn").click(function () {
+            swal.fire({
+                title: "修改头像",
+                html: `
+                <form action="/uploadServlet" method="post" enctype="multipart/form-data">
+                <p><input type="file" name="file1"></p>
+                <p><input type="submit"></p>
+                </form>
+                `,
+                showCancelButton: true,
+                showConfirmButton:false,
+                cancelButtonText: "取消",
+            })
+        })
+        $("#changeemailbtn").click(function () {
             Swal.fire({
                 title: '修改用户名',
                 html: `
@@ -224,10 +301,10 @@
                     axios({
                         method: "POST",
                         url: "/changeemailServlet",
-                        data: "email=" + $("#change_email_text").val()+"&password="+sha1($("#password_confirm").val())
+                        data: "email=" + $("#change_email_text").val() + "&password=" + sha1($("#password_confirm").val())
                     }).then(function (response) {
                         console.log(response.data.msg)
-                        if (response.data.msg=="修改成功") {
+                        if (response.data.msg == "修改成功") {
                             setTimeout("location.reload(true)", 1000)
                             Swal.fire(
                                 {
@@ -253,6 +330,203 @@
                 }
             })
         })
+        $("#changepasswordbtn").click(function () {
+            Swal.fire({
+                title: '修改密码',
+                html: `
+            <form method="post" id="up1">
+            <label>输入原密码:
+            <input type="password" name="password_origin" id="password_origin" form="up1">
+            </label>
+            <label>输入修改后密码:
+            <input type="password" name="change_password" id="change_password" form="up1">
+            </label>
+            </form>
+            `,
+                showCancelButton: true,
+                showConfirmButton: true,
+                confirmButtonText: '修改',
+                cancelButtonText: "取消",
+                preConfirm: function () {
+                    return new Promise((resolve, reject) => {
+                        resolve({
+                            password: $("#password_origin").val(),
+                            afpassword: $("#change_password").val()
+                        })
+                    })
+                },
+            }).then((res) => {
+                if (res.value) {
+                    if($("#change_password").val().length>=6&&$("#change_password").val().length<=16){
+                    axios({
+                        method: "POST",
+                        url: "/changepasswordServlet",
+                        data: "password=" + sha1($("#password_origin").val()) + "&afpassword=" + sha1($("#change_password").val())
+                    }).then(function (response) {
+                        console.log(response.data.msg)
+                        if (response.data.msg == "修改成功,请重新登录") {
+                            $.cookie("uid",null,{expires: -1,path: "/"})
+                            $.cookie("verifycode",null,{expires: -1,path: "/"})
+                            setTimeout("location.reload(true)", 1000)
+                            Swal.fire(
+                                {
+                                    type: 'success',
+                                    icon: 'success',
+                                    title: response.data.msg,
+                                    showConfirmButton: false,
+                                    timer: 2000
+                                }
+                            )
+                        } else {
+                            Swal.fire(
+                                {
+                                    type: 'error',
+                                    icon: 'error',
+                                    title: response.data.msg,
+                                    showConfirmButton: false,
+                                    timer: 2000
+                                }
+                            )
+                        }
+                    })
+                    }else {
+                        Swal.fire(
+                            {
+                                type: 'error',
+                                icon: 'error',
+                                title: "密码长度不正确",
+                                showConfirmButton: false,
+                                timer: 2000
+                            }
+                        )
+                    }
+                }
+            })
+        })
+        $("#changeusernamebtn").click(function () {
+            Swal.fire({
+                title: '修改用户名',
+                html: `
+            <form method="post" id="up1">
+            <label>输入你想修改的用户名:
+            <input type="text" name="change_username" id="change_username" form="up1">
+            </label>
+            </form>
+            `,
+                showCancelButton: true,
+                showConfirmButton: true,
+                confirmButtonText: '修改',
+                cancelButtonText: "取消",
+                preConfirm: function () {
+                    return new Promise((resolve, reject) => {
+                        resolve({
+                            username: $("#change_username").val()
+                        })
+                    })
+                },
+            }).then((res) => {
+                if (res.value) {
+                    if($("#change_username").val().length>=3&&$("#change_username").val().length<=10){
+                        axios({
+                            method: "POST",
+                            url: "/changeusernameServlet",
+                            data: "username=" + $("#change_username").val()
+                        }).then(function (response) {
+                            console.log(response.data.msg)
+                            if (response.data.msg == "修改成功") {
+                                setTimeout("location.reload(true)", 1000)
+                                Swal.fire(
+                                    {
+                                        type: 'success',
+                                        icon: 'success',
+                                        title: response.data.msg,
+                                        showConfirmButton: false,
+                                        timer: 2000
+                                    }
+                                )
+                            } else {
+                                Swal.fire(
+                                    {
+                                        type: 'error',
+                                        icon: 'error',
+                                        title: response.data.msg,
+                                        showConfirmButton: false,
+                                        timer: 2000
+                                    }
+                                )
+                            }
+                        })
+                    }else {
+                        Swal.fire(
+                            {
+                                type: 'error',
+                                icon: 'error',
+                                title: "用户名长度不正确",
+                                showConfirmButton: false,
+                                timer: 2000
+                            }
+                        )
+                    }
+                }
+            })
+        })
+        $("#changedescribebtn").click(function () {
+            Swal.fire({
+                title: '修改用户名',
+                html: `
+            <form method="post" id="up1">
+            <label>输入你想修改的简介:
+            <input type="text" name="change_describe" id="change_describe" form="up1">
+            </label>
+            </form>
+            `,
+                showCancelButton: true,
+                showConfirmButton: true,
+                confirmButtonText: '修改',
+                cancelButtonText: "取消",
+                preConfirm: function () {
+                    return new Promise((resolve, reject) => {
+                        resolve({
+                            username: $("#change_describe").val()
+                        })
+                    })
+                },
+            }).then((res) => {
+                if (res.value) {
+                        axios({
+                            method: "POST",
+                            url: "/changedescribeServlet",
+                            data: "describe=" + $("#change_describe").val()
+                        }).then(function (response) {
+                            if (response.data.msg == "修改成功") {
+                                setTimeout("location.reload(true)", 1000)
+                                Swal.fire(
+                                    {
+                                        type: 'success',
+                                        icon: 'success',
+                                        title: response.data.msg,
+                                        showConfirmButton: false,
+                                        timer: 2000
+                                    }
+                                )
+                            } else {
+                                Swal.fire(
+                                    {
+                                        type: 'error',
+                                        icon: 'error',
+                                        title: response.data.msg,
+                                        showConfirmButton: false,
+                                        timer: 2000
+                                    }
+                                )
+                            }
+                        })
+                }
+            })
+        })
+
+
+
     })
     const {createApp} = Vue
     createApp({
@@ -261,6 +535,7 @@
                 user: [],
                 usergroup: [],
                 chakan: "msg",
+                collectlist:[]
             }
         },
         mounted() {
@@ -280,6 +555,9 @@
                 } else {
                     _this.user.ifconfirmemail = "未验证"
                 }
+                if (resp.data.uid==$.cookie("uid")){
+                    $("#usermenu").show()
+                }
             })
             axios({
                 method: "post",
@@ -288,6 +566,73 @@
                 _this.usergroup = resp.data
                 console.log(resp.data)
             })
+        },
+        methods:{
+            getcollectlist:function () {
+                var _this = this;
+                $("#msgtable").hide()
+                $("#basictable").hide()
+                $("#setpage").hide()
+                $("#collecttable").show()
+                axios({
+                    method: "POST",
+                    url: "/getusercollectServlet",
+                    data:"page=1"
+                }).then(function (resp) {
+                    _this.collectlist=resp.data
+                    console.log(resp.data)
+                }).catch(function (error) {
+                    Swal.fire(
+                        {
+                            type: 'error',
+                            icon: 'error',
+                            title: "服务器无法处理该请求",
+                            showConfirmButton: false,
+                            timer: 2000
+                        }
+                    )
+                })
+                axios({
+                    method: "post",
+                    url: "/getcollectcountServlet"
+                }).then(function (resp) {
+                    totalcount = resp.data.totalcount
+                    console.log("totalcount="+totalcount)
+                    $('.pagination').jqPaginator({
+                        totalCounts: Number(totalcount),
+                        pageSize: 10,
+                        visiblePages: 10,
+                        first: '<li class="first"><a href="javascript:void(0);">首页<\/a><\/li>',
+                        prev: '<li class="prev"><a href="javascript:void(0);"><i class="arrow arrow2"><\/i>上一页<\/a><\/li>',
+                        next: '<li class="next"><a href="javascript:void(0);">下一页<i class="arrow arrow3"><\/i><\/a><\/li>',
+                        last: '<li class="last"><a href="javascript:void(0);">末页<\/a><\/li>',
+                        page: '<li class="page"><a href="javascript:void(0);">{{page}}<\/a><\/li>',
+                        currentPage: 1,
+                        onPageChange: function (num, type) {
+                            if (type == "change") {
+                                axios({
+                                    method: "POST",
+                                    url: "/getusercollectServlet",
+                                    data:"page="+num
+                                }).then(function (resp) {
+                                    _this.collectlist=resp.data
+                                    console.log(resp.data)
+                                }).catch(function (error) {
+                                    Swal.fire(
+                                        {
+                                            type: 'error',
+                                            icon: 'error',
+                                            title: "服务器无法处理该请求",
+                                            showConfirmButton: false,
+                                            timer: 2000
+                                        }
+                                    )
+                                })
+                            }
+                        }
+                    });
+                })
+            }
         }
     }).mount('#userinformation')
 </script>
